--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -96,7 +96,7 @@ The modifications made in these development branches will then be transferred (d
 (ref:gitbranchcap) Branches in git.
 
 ```{r 13-secure-1, echo=FALSE, fig.cap="(ref:gitbranchcap)"}
-knitr::include_graphics("img/Git_branches_fork.svg")
+knitr::include_graphics("img/Git_branches_fork.png")
 ```
 
 In practice, you might want to use a workflow where each branch is designed to fix a small issue or implement a feature, so that it is easier to separate each small part of the work.
@@ -226,7 +226,14 @@ It supports Windows, Linux and macOS.
 [GitHub actions](https://github.com/features/actions) serve a related purpose: defining actions to be performed as responses to events on the GitHub repository. 
 Testing, building documentation, push to another repository, deploy on the server... all these actions can be automatically performed. 
 As with Travis CI, these actions are defined in a `yaml` file. 
-Examples for these configuration can be find at [r-lib/actions](https://github.com/r-lib/actions). 
+Examples for these configuration can be find at [r-lib/actions](https://github.com/r-lib/actions), and some can be automatically linked to your project using functions from `{usethis}`: `use_github_action_check_release()`, `use_github_action_check_standard()`, `use_github_action_check_full()` and `use_github_action_pr_commands()`. 
+The three first perform a standard `R CMD check`, under various conditions: 
+
++ the `release` tests on MacOS, with the latest version of R, and runs the check via the `{rcmdcheck}` [@R-rcmdcheck] package 
++ `standard` does the check for 3 OS (Windows, Mac and Linux), and for R and R-devel 
++ `full` does `standard` but for the last 5 minors version of R
+
+`use_github_action_pr_commands()`, 
 
 If you are working with GitLab, you can use the integrated `GitLab CI` service: it serves the same purpose, with the little difference that it is completely docker-based: you define a `yaml` with a series of stages that are performed (concurrently or sequentially), and they are all launched inside a docker container. 
 To help you with this, the [`colinfay/r-ci-tidyverse`](https://hub.docker.com/r/colinfay/r-ci-tidyverse) docker image comes with pre-installed packages for testing: `{remotes}` [@R-remotes], `{testthat}` [@R-testthat], `{config}` [@R-config]... and is available for several R versions. 
